css/style.css
/*
Project Name: Visit California-State of Play
Author: Shannon Orcutt & Trevor Lazarus
The Foundry @ Time Inc.
*/
html, body {
	font-size: 10px;
}

body {
	font-family: 'Brandon Grotesque', sans-serif;
	overflow-x: hidden;
}

/* MAIN HERO */

.main-hero {
	background-image: url("../images/FPO-main-southern-hero-bg.jpg");
	background-size: cover;
	text-align: center;
	position: relative;
}

/* Title SVG Styles */

.title-trtmnt {
	position:absolute;
	top:50%;
	left:50%;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	width:875px;
	margin-top:-2%;
	-webkit-filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.12));
	filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.12));
}
.title-trtmnt .state {
	font-size:64px;
	font-weight:900;
	text-transform:uppercase;
}
.title-trtmnt .of {
	font-size:28.7225px;
	font-weight:300;
}
.title-trtmnt .play {
	font-size:66px;
	letter-spacing:7px;
	text-transform:uppercase;
	font-weight:900;
}
.title-trtmnt .southern {
	fill:#EE0077;
	font-size:22px;
	letter-spacing:1px;
	text-transform:uppercase;
	font-weight:900;
}
.title-trtmnt .california {
	fill:#EE0077;
	font-weight:300;
	font-size:24px;
	letter-spacing:1.5px;
	text-transform:uppercase;
}
.title-trtmnt .dek {
	font-weight:300;
	font-size:17px;
}
.title-trtmnt .bg-diamond {fill:#FFFFFF;}
.title-trtmnt .st1{fill:none;stroke:#EE0077;stroke-width:0.75;stroke-miterlimit:10;}
.title-trtmnt .st6{fill:none;stroke:#05BBFF;stroke-width:2.5;stroke-miterlimit:10;}
.title-trtmnt .txt-bx{fill:none;}

/* DROPDOWN */

/* whole nav has bonus 1px height*/
.sticky-nav {
	position: fixed;
	top: 0;
	width: 100%;
	height: 44px;
	z-index: 5000!important;
	box-shadow: 0 7px 8px rgba(0,0,0,.12);
	text-align: center;
	font-family: 'Brandon Grotesque', sans-serif;
}

.sticky-nav:after {
	content: "";
	display: table;
	clear: both;
}

.dropdown {
	width: 33.28%;
	display: inline-block;
	float: left;
}

.sticky-nav .btn {
	width: 100%;
	border-radius: 0;
	border: none;
	background-color: rgba(5,187,255,.8);
	margin: 0;
	padding: 0;
	font-family: 'Brandon Grotesque', sans-serif;
	font-weight: 900;
	font-size: 20px;
	line-height: 44px;
}

.sticky-nav .btn:hover {
	background-attachment: none;
	color: rgba(255,255,255,1);
}

.nav-explore {
	font-weight: 500;
	font-size: 15px;
	letter-spacing: .5em;
}

.nav-rule {
	width: .08%;
	height: 45px;
	display: inline-block;
	float: left;
	background-color: rgba(255,255,255,1);
}

.dropdown:hover {
	color: rgba(255,255,255,1);
}

.dropdown:hover .caret {
	visibility: hidden;
}

.dropdown:hover .dropdown-menu {
	display: block;
}

.dropdown-menu {
	width: 100%;
	margin: 0;
	border-radius: 0;
	border: none;
	background-color: rgba(5,187,255,1);
	color: rgba(255,255,255,1);
	text-align: center;
	font-weight: 900;
	font-size: 20px;
}

.dropdown-menu li.btn {
	margin-top: -83px;
	background-color: rgba(5,187,255,1);
	height: 41px;
	padding: 0px;
}

.invisible-hover {
	background-color: rgba(0,0,0,0);
	height: 4px;
	margin-top: -29px
}

.dropdown-menu li {
	padding: 15px 0;
}

.dropdown-menu li a {
	color: rgba(255,255,255,1);
}

.dropdown-menu li a:hover {
	color: rgba(0,0,0,1);
	background-color: rgba(5,187,255,0);
}

.dropdown-menu .blogger-circle {
	width: 50px;
	height: 50px;
	margin: 0 auto;
	background-color: black;
/*	background-image: url("../images/FPO_NCA.jpg");
	background-size: 100%;*/
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	border-radius: 50%;
	box-shadow: 0px 0px 0px 2px rgba(255,255,255,1);
}

.dropdown-menu li .nav-blogger {
	font-weight: 700;
	font-size: 22px;
}

.dropdown-menu li .blogger-name {
	color: rgba(0,0,0,1);
	font-weight: 300;
	font-size: 15px;
}

.dropdown-menu .divider {
	box-shadow: 0px 10px 6px -5px rgba(0,0,0,.1);
	max-width: 80%;
	margin: -30px 10% 0px 10%;
	background-color: rgba(5,187,255,0);
}

.nav-progress-bar {
	position: absolute;
	bottom: -1px;
	width: 100%;
	height: 4px;
	background-color: rgba(235,4,120,1);
}

.nav-status-bar {
	position: absolute;
	z-index: +1;
	bottom: -1px;
	width: 0%;
	height: 4px;
	background-color: rgba(250,192,221,1);
	transition: all 2s ease;
}

/* TOC */

.toc .row {
	height: 100%;
	border-bottom: 4px solid rgba(235,4,120,1);
	background-color: rgba(241,251,255,1);
}

.toc .row .col-md-4 {
	background-color: rgba(241,251,255,1);
	background-size: 100%;
	background-repeat: no-repeat;
	transition: all 1s ease;
	margin-top: -112px;
}

.toc .row .col-md-4:hover {
	background-color: rgba(255,255,255,1);
}

.toc .row .toc-nca {
	background-image: url("../images/Nav/770x388/GettyImages-517877952_screen.png");
}

.toc .row .toc-nca:hover {
	background-image: url("../images/Nav/770x388/GettyImages-517877952.png");
}

.toc .row .toc-cca {
	background-image: url("../images/Nav/770x388/GettyImages-184084521_screen.png");
}

.toc .row .toc-cca:hover {
	background-image: url("../images/Nav/770x388/GettyImages-184084521.png");
}
.toc .row .toc-sca {
	background-image: url("../images/Nav/770x388/GettyImages-152627362_screen.png");
}

.toc .row .toc-sca:hover {
	background-image: url("../images/Nav/770x388/GettyImages-152627362.png");
}

ul.toc-menu {
	text-align: center;
	position: relative;
	z-index: +1;
}

ul.toc-menu li {
	display: block;
	font-size: 20px;
}

ul.toc-menu li a {
	display: block;
	padding: 15px 0;
	margin: 15px 0 20px 0;
	color: rgba(0,0,0,1);
	text-decoration: none;
}

ul.toc-menu li a:hover {
	color: rgba(235,4,120,1);
	text-decoration: none;
}

ul.toc-menu .nav-explore {
	margin-top: 20px;
	color: rgba(255,255,255,1);
	text-shadow: 0px 2px 6px rgba(0,0,0,.55);
}
ul.toc-menu .toc-region {
	box-shadow: 0px 10px 6px -5px rgba(0,0,0,.1);
	width: 50%;
	margin: 10px 25%;
	padding: 10px;
	background-color: rgba(255,255,255,1);
	font-weight: 900;
	font-size: 20px;
	color: rgba(5,187,255,1);
}
/* ... */

